feat(component): add URLInput

--- a/src/browser/index.html
+++ b/src/browser/index.html
@@ -5,6 +5,7 @@
     <title></title>
     <link rel="stylesheet" href="../../node_modules/codemirror/lib/codemirror.css">
     <link rel="stylesheet" href="../../node_modules/react-select/.publish/example.css">
+    <link rel="stylesheet" href="../../css/index.css">
 </head>
 <body>
 <div id="js-main"></div>
