feat(textlint): auto update tech-word-dictionary

--- a/src/browser/index.html
+++ b/src/browser/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title></title>
     <link rel="stylesheet" href="../../node_modules/codemirror/lib/codemirror.css">
+    <link rel="stylesheet" href="../../node_modules/codemirror/addon/lint/lint.css">
     <link rel="stylesheet" href="../../node_modules/react-select/.publish/example.css">
     <link rel="stylesheet" href="../../css/index.css">
 </head>
