--- a/src/browser/index.html
+++ b/src/browser/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../../node_modules/react-select/.publish/example.css">
     <link rel="stylesheet" href="../../css/index.css">
 </head>
-<body style="-webkit-app-region: drag">
+<body>
 <div id="js-main"></div>
 <script src="./index.js"></script>
 </body>
