--- a/src/browser/index.html
+++ b/src/browser/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../../node_modules/codemirror/lib/codemirror.css">
     <link rel="stylesheet" href="../../node_modules/codemirror/addon/lint/lint.css">
     <link rel="stylesheet" href="../../node_modules/react-select/.publish/example.css">
+    <link rel="stylesheet" href="../../node_modules/notie/dist/notie.css">
     <link rel="stylesheet" href="../../css/index.css">
 </head>
 <body>
