--- a/src/mini-twitter/index.html
+++ b/src/mini-twitter/index.html
@@ -16,6 +16,26 @@
             color: white !important;
         }
 
+        .Editor .ReactCodeMirror {
+            background-color: #ffffff;
+            border-color: #d9d9d9 #cccccc #b3b3b3;
+            border-radius: 4px;
+            box-sizing: border-box;
+            color: #333333;
+            cursor: default;
+            outline: none;
+        }
+
+
+        .Editor .CodeMirror, .Editor .CodeMirror-scroll {
+            min-height: 5em;
+        }
+
+        .Editor .CodeMirror {
+            height: auto;
+            font-family: Monaco, 'Andale Mono', 'Lucida Console', 'Bitstream Vera Sans Mono', 'Courier New', Courier, monospace;
+        }
+
         .CodeMirror-cursor {
             border-left: 1px solid white;
         }
