--- a/src/browser/index.html
+++ b/src/browser/index.html
@@ -11,6 +11,6 @@
 </head>
 <body>
 <div id="js-main"></div>
-<script src="./index.js"></script>
+<script src="./index.js" type="module"></script>
 </body>
 </html>
